--- a/dashboard.html
+++ b/dashboard.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
-    <meta name="author" content="zeeoneofc">
-    <title>Alphabot - REST APIs</title>
-    <meta property="og:site_name" name="og:site_name" content="Alphabot APIs">
-    <meta property="og:title" name="og:title" content="Alphabot - REST APIs">
-    <meta property="og:url" name="og:url" content="https://api-alphabot.herokuapp.com/">
+    <meta name="author" content="ronaldo">
+    <title>YONZZI - REST APIs</title>
+    <meta property="og:site_name" name="og:site_name" content="YONZZI APIs">
+    <meta property="og:title" name="og:title" content="YONZZI - REST APIs">
+    <meta property="og:url" name="og:url" content="https://api-dugul.herokuapp.com/">
     <meta property="og:image" name="og:image" content="/static/icon/android-icon-192x192.png">
     <meta property="og:description" name="og:description" content="A REST APIs website that provides a wide variety of features for developers.">
     <link rel="apple-touch-icon" sizes="57x57" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
